# OpenGL_learning

./: CMakeLists.txt  camera.h  glad.c  image_loader.cpp  main.cpp  shader.h
include/glad/: glad.h
lib/GLFW/: glfw3.lib
scr/: 3.3.shader.fs  3.3.shader.vs
